--- a/site/index.html
+++ b/site/index.html
@@ -22,7 +22,7 @@
       </a>
       <div id="navbar_itens">
         <ul id="nav_contador">
-          <ul>
+          <div>
             <li>
               <h1 id="hoje">
                 <p>HOJE</p>
@@ -30,8 +30,8 @@
                 <p>SOMOS</p>
               </h1>
             </li>
-          </ul>
-          <ul style="display: flex">
+          </div>
+          <div>
             <div class="primeira linha-vertical"></div>
             <li>
               <h2 class="contador_titulo"><i class="fa-solid fa-location-dot"></i> DIVISÕES</h2>
@@ -47,7 +47,7 @@
               <h2 class="contador_titulo"><i class="fa-solid fa-globe"></i> PAÍSES</h2>
               <h2 class="contador_valor">02</h2>
             </li>
-          </ul>
+          </div>
         </ul>
         <ul id="nav_menu">
           <div id="itens_menu">
@@ -86,6 +86,7 @@
           <i class="fa-solid fa-bars"></i>
         </button>
       </li>
+
 
       <a class="opcao_navfixo" onclick="fechaHamburger()" href="#divisao">
         <li>DIVISÕES</li>
@@ -131,25 +132,25 @@
     </section>
     <section id="galeria">
       <ul id="imgs_galeria">
-      <li id="img1_galeria"></li>
-      <li id="img2_galeria"></li>
-      <li id="img3_galeria"></li>
-      <li id="img4_galeria"></li>
-      <li id="img5_galeria"></li>
+        <li id="img1_galeria"></li>
+        <li id="img2_galeria"></li>
+        <li id="img3_galeria"></li>
+        <li id="img4_galeria"></li>
+        <li id="img5_galeria"></li>
 
-    </ul>
-    <div id="preCarregamento"></div>
-    <ul id="footer_galeria">
-      <li id="botoes_galeria">
-        <button onclick="voltar()" aria-label="Voltar imagem"><i class="fa-solid fa-caret-left"></i></button>
-        <button onclick="passar()" aria-label="Passar imagem"><i class="fa-solid fa-caret-right"></i></button>
-      </li>
-      <li id="insta_galeria"><a href="https://www.instagram.com/impetusmc/" target="_blank"
-          rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i> impetusmc</a>
-      </li>
-    </ul>
+      </ul>
+      <div id="preCarregamento"></div>
+      <ul id="footer_galeria">
+        <li id="botoes_galeria">
+          <button onclick="voltar()" aria-label="Voltar imagem"><i class="fa-solid fa-caret-left"></i></button>
+          <button onclick="passar()" aria-label="Passar imagem"><i class="fa-solid fa-caret-right"></i></button>
+        </li>
+        <li id="insta_galeria"><a href="https://www.instagram.com/impetusmc/" target="_blank"
+            rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i> impetusmc</a>
+        </li>
+      </ul>
     </section>
-    
+
     <!-- <section id="historia">
         <div>
           <div class="titulo_subtitulo">
