Matriz, Divisões e Suportes

--- a/site/index.html
+++ b/site/index.html
@@ -48,7 +48,7 @@
             <div>
               <li>
                 <h2 class="contador_titulo"><i class="fa-solid fa-map-location-dot"></i> ESTADOS</h2>
-                <h2 class="contador_valor">0<div class="ls"></div>5</h2>
+                <h2 class="contador_valor">0<div class="ls"></div>4</h2>
               </li>
               <div class="linha-vertical"></div>
               <li>
@@ -245,10 +245,10 @@
               <h2>E MATRIZ</h2>
             </div>
           </div>
-          <img id="mapa" src="img/mapa.webp" alt="Mapa Brasil" />
+          <img id="mapa" src="img/mapa/mapa_brasil.webp" alt="Mapa Brasil" />
         </div>
         <div class="mapa_bandeiras">
-          <ul>
+          <ul id="area_bandeiras">
             <li class="mat_div_sup">
               <h1><i class="fa-solid fa-house"></i> MATRIZ</h1>
               <ul class="estados_cidades">
