correção margem navbar mobile

--- a/site/index.html
+++ b/site/index.html
@@ -348,7 +348,20 @@
             </div>
           </div>
         <div id="quadro_comando">
-          
+          <ul>
+            <li>
+              <h1>Lorem</h1>
+              <h2>ipsum</h2>
+            </li>
+            <li>
+              <h1>Lorem</h1>
+              <h2>ipsum</h2>
+            </li>
+            <li>
+              <h1>Lorem</h1>
+              <h2>ipsum</h2>
+            </li>
+          </ul>
         </div>
       </section>
   </main>
