--- a/site/index.html
+++ b/site/index.html
@@ -348,18 +348,33 @@
             </div>
           </div>
         <div id="quadro_comando">
-          <ul>
+          <ul class="cargos">
             <li>
-              <h1>Lorem</h1>
-              <h2>ipsum</h2>
+              <div class="cargo_img"></div>
+              <h1>PRESIDENTE</h1>
+              <p class="subtitulo_deco">x x x</p>
             </li>
             <li>
-              <h1>Lorem</h1>
-              <h2>ipsum</h2>
+              <div class="cargo_img"></div>
+              <h1>VICE-PRESIDENTE</h1>
+              <p class="subtitulo_deco">x x x</p>
+            </li>
+          </ul>
+          <ul class="cargos">
+            <li>
+              <div class="cargo_img"></div>
+              <h1>LOREM</h1>
+              <p class="subtitulo_deco">x x x</p>
             </li>
             <li>
-              <h1>Lorem</h1>
-              <h2>ipsum</h2>
+              <div class="cargo_img"></div>
+              <h1>IPSUM</h1>
+              <p class="subtitulo_deco">x x x</p>
+            </li>
+            <li>
+              <div class="cargo_img"></div>
+              <h1>DOLOR</h1>
+              <p class="subtitulo_deco">x x x</p>
             </li>
           </ul>
         </div>
