--- a/site/index.html
+++ b/site/index.html
@@ -363,17 +363,17 @@
           <ul class="cargos">
             <li>
               <div class="cargo_img"></div>
-              <h1>LOREM</h1>
+              <h1>SECRETÁRIO</h1>
               <p class="subtitulo_deco">x x x</p>
             </li>
             <li>
               <div class="cargo_img"></div>
-              <h1>IPSUM</h1>
+              <h1>TESOUREIRO</h1>
               <p class="subtitulo_deco">x x x</p>
             </li>
             <li>
               <div class="cargo_img"></div>
-              <h1>DOLOR</h1>
+              <h1>DISCIPLINADOR</h1>
               <p class="subtitulo_deco">x x x</p>
             </li>
           </ul>
