Ajuste nomes comando

--- a/site/index.html
+++ b/site/index.html
@@ -469,13 +469,13 @@
         <ul class="cargos">
           <li>
             <div class="cargo_img"></div>
-            <h1>SEGUNDO</h1>
+            <h1>NOME</h1>
             <h2>PRESIDENTE</h2>
             <p class="subtitulo_deco">x x x</p>
           </li>
           <li>
             <div class="cargo_img"></div>
-            <h1>SHINZO</h1>
+            <h1>NOME</h1>
             <h2>VICE-PRESIDENTE</h2>
             <p class="subtitulo_deco">x x x</p>
           </li>
@@ -483,7 +483,7 @@
         <ul class="cargos">
           <li>
             <div class="cargo_img"></div>
-            <h1>CARNICEIRO</h1>
+            <h1>NOME</h1>
             <h2>SECRETÁRIO</h2>
             <p class="subtitulo_deco">x x x</p>
           </li>
